Some refactoring to have a fixed header/footer in the sidebar
Also fix the scrollbar appearance.

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,20 @@
   margin: 0 auto;
   padding: 2rem 0 0 0;
 }
+
+::-webkit-scrollbar {
+  height: 1rem;
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #aaa;
+  border-color: rgba(255,255,255,1);
+  border-radius: 9999px;
+  border-width: 1px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 9999px;
+}
